# Project-Scaffolder

./: .gitignore  README.md  app.py  lol.json
backend/: app.py  template-handler.py  template_generator.py  util.py
backend/Scripts/: activate  activate.bat
backend/classes/: directory.py  file.py
backend/static/css/: main.css
backend/templates/: index.html
classes/: directory.py  schema.py
gemini-service/: .env  app.js  package.json
gemini-service/src/controller/: gemini.controller.js
gemini-service/src/logger/: Logger.js  morgan.middlware.js
gemini-service/src/routes/: gemini.routes.js
gemini-service/src/service/: gemini.service.js
gemini-service/src/utils/: errorHandling.js
templates/: schema.html
webapp/: app.py  pyproject.toml  pyvenv.cfg  sample.json  util.py  utils.py
webapp/classes/: directory.py  file.py  schema.py
webapp/controllers/: file_system.py  github.py  project_manager.py
webapp/controllers/engine/: template_engine.py
webapp/controllers/engine/templates/backend/flask/projectName/: .gitignore  README.md  pyproject.toml
webapp/controllers/engine/templates/backend/flask/projectName/src/app/: __main__.py
webapp/controllers/engine/templates/backend/flask/projectName/src/app/routes/: __init__.py  health.py
webapp/decorators/: singleton.py
webapp/engine/: template_generator.py
webapp/engine/templates/: template_generator.py
webapp/static/css/: main.css  style.css
webapp/static/js/: chat.js  deps.js  gemini.js  github.js  main.js  script.js
webapp/templates/: index(old).html  index.html  index2.html  tempIndex.html
(+87 files in other folders)
