[tool.poetry]
name = "projectName"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
{{dependencies}}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
